--- a/memlock/manifest.json
+++ b/memlock/manifest.json
@@ -4,8 +4,8 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "theme_color": "#4e5052",
+    "description": "Short term memory helper.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
